update experience and about me

--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
           <li style="display: none;"><a href="#portfolio"> <span>Projects</span></a></li>
           <li style="display: none;"><a href="#skills"> <span>Skills</span></a></li>
           <li class="english_site">
-            <a href="https://drive.google.com/file/d/1pvPkaU480u_DduKOPmDlMsLReypF0T1O/view?usp=sharing"
+            <a href="https://drive.google.com/file/d/1aTcGNcWYOL7iMYQmEWSdFwpDbTEBOY96/view?usp=sharing"
               target="_blank">
               <span>Resume</span>
             </a>
           </li>
           <li class="spanish_site">
-            <a href="https://drive.google.com/file/d/16LYtZNDv6FyyzQ5KB9d43EZB-vvUvaen/view?usp=sharing"
+            <a href="https://drive.google.com/file/d/18lR8suvoLchr4TcxycOrprMUEhCjoyDj/view?usp=sharing"
               target="_blank">
               <span>Hoja de vida</span>
             </a>
@@ -159,16 +159,10 @@
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p class="english_site">I am a bachelor in <strong>Systems Engineering</strong>, graduated from <strong>Universidad Nacional Mayor de San Marcos</strong>.<br>
-            I have over three years of experience in Linux server administration and web page 
-            development geared towards startups. My skills range from using machine learning 
-            techniques with Python to SQL database administration and implementing cloud computing 
-            solutions.
+            Aspiring Data Engineer with IT experience and a strong foundation in Python, SQL, ETL, Linux, and cloud computing (AWS, GCP, Azure). I have worked in server administration, virtual machine configuration, VPN solutions, and database replication. I am passionate about developing and implementing data pipelines, optimizing databases, big data, and data warehousing. In my free time, I enjoy playing the guitar and exploring the world of video games.
           </p>
           <p class="spanish_site">Soy bachiller en <strong>Ingeniería de sistemas</strong> egresado de la <strong>Universidad Nacional Mayor de San Marcos</strong>.<br>
-            Poseo más de tres años de experiencia en la administración de servidores Linux y 
-            el desarrollo de páginas web orientadas a emprendimientos. Mis competencias abarcan 
-            desde el uso de técnicas de <em>machine learning</em> con Python, hasta la 
-            administración de bases de datos SQL y la implementación de soluciones en <em>cloud computing</em>.
+            Aspirante a Ingeniero de Datos con experiencia en TI y una sólida base en <em>Python</em>, SQL, ETL, <em>Linux</em> y <em>cloud computing</em> (AWS, GCP, Azure). He trabajado en administración de servidores, configuración de máquinas virtuales, soluciones VPN y replicación de bases de datos. Me apasiona el desarrollo e implementación de <em>data pipelines</em>, la optimización de bases de datos, <em>big data</em> y <em>data warehousing</em>. En mi tiempo libre, disfruto tocar la guitarra y explorar el mundo de los videojuegos.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -475,21 +469,31 @@
           <h4 style="text-align:left;padding: 10px 0px 0px 10px;"><a href="https://www.edukusy.com/"
               style="color:#12d640" target="_blank">Edukusy</a><br> </h4>
           <h5 style="text-align:left;padding: 0px 0px 0px 10px;">
-            <span class="english_site">September 2021 - Present</span>
-            <span class="spanish_site">Septiembre 2021 - Presente</span>
+            <span class="english_site">September 2021 - September 2024</span>
+            <span class="spanish_site">Septiembre 2021 - Septiembre 2024</span>
           </h5>
           <p style="text-align:left;color:#fff;padding: 5px 0px 5px 10px;">
-            <em class="english_site">Software Engineer</em>
-            <em class="spanish_site">Ingeniero de Software</em>
+            <em class="english_site">Cloud & Infrastructure Engineer (Junior level)</em>
+            <em class="spanish_site">Ingeniero de Nube e Infraestructura (nivel Junior)</em>
           </p>
           <ul style="text-align:left;">
             <li>
-              <span class="english_site">Management of the educational platform facilitating and ensuring a correct user experience for more than 1000 students from different secondary education institutions.</span>
-              <span class="spanish_site">Gestión de la plataforma educativa facilitando y asegurando una correcta experiencia de uso para más de 1000 estudiantes de diferentes instituciones de educación secundaria.</span>
+              <span class="english_site">Managed Linux servers hosting web and database services for the Edukusy educational platform (edukusy.com).</span>
+              <span class="spanish_site">Administré servidores Linux que alojaban servicios web y de bases de datos para la plataforma educativa Edukusy (edukusy.com).</span>
             </li>
             <li>
-              <span class="english_site">Configuration, troubleshooting and server-side administration of the educational platform.</span>
-              <span class="spanish_site">Configuración, resolución de problemas y administración del lado del servidor de la plataforma educativa.</span>
+              <span class="english_site">Automated data workflows using Bash Script and Python, including scheduled database backups, service monitoring, and MySQL database replication with Galera Cluster or Maxwell's Daemon.
+              </span>
+              <span class="spanish_site">Automaticé flujos de trabajo de datos usando Bash Script y Python, incluyendo copias de seguridad programadas, monitorización de servicios y replicación de bases de datos MySQL con Galera Cluster o Maxwell's Daemon.
+              </span>
+            </li>
+            <li>
+              <span class="english_site">Developed scripts in Perl and Python to enhance platform functionalities and optimize data processes.</span>
+              <span class="spanish_site">Desarrollé scripts en Perl y Python para mejorar funcionalidades de la plataforma y optimizar procesos de datos.</span>
+            </li>
+            <li>
+              <span class="english_site">Worked with virtualized environments to deploy database servers (MySQL), real-time communication tools (Jitsi Meet), VPNs for secure internal connections, and proxy servers for traffic management.</span>
+              <span class="spanish_site">Trabajé con entornos virtualizados para desplegar servidores de bases de datos (MySQL), herramientas de comunicación en tiempo real (Jitsi Meet), VPNs para conexiones internas seguras y servidores proxy para gestión de tráfico.</span>
             </li>
           </ul>
         </div>
@@ -508,15 +512,17 @@
           </p>
           <ul style="text-align:left;">
             <li>
-              <span class="english_site">Web server (Apache) and database (Mysql) administration, management
-                of SHH and FTP protocols.</span>
-              <span class="spanish_site">Administración del servidor web (Apache) y de la base de datos (Mysql),
-                manejo de protocolos SHH y FTP.</span>
+              <span class="english_site">Full-stack development of a reporting platform for surgical procedures using PHP, CodeIgniter, MySQL, and LibreOffice, ensuring efficient data processing and report generation.</span>
+              <span class="spanish_site">Desarrollo full-stack de una plataforma de reportes para procedimientos quirúrgicos usando PHP, CodeIgniter, MySQL y LibreOffice, optimizando el procesamiento de datos y la generación de informes.</span>
             </li>
             <li>
-              <span class="english_site">Migration and implementation of the server on Google Cloud Platform. Using Compute Engine and Virtual
-                Private Cloud (VPC).</span>
-              <span class="spanish_site">Migración e implementación del servidor en Google Cloud Platform. Usando Compute Engine y Virtual Private Cloud (VPC).</span>
+              <span class="english_site">Deployed the platform in virtualized environments, both On-Premise and AWS (EC2), ensuring scalability and availability.</span>
+              <span class="spanish_site">Desplegué la plataforma en entornos virtualizados, tanto On-Premise como en AWS (EC2), garantizando escalabilidad y disponibilidad.</span>
+            </li>
+            <li>
+              <span class="english_site">Administered and maintained servers using the Linux command line, troubleshooting issues, managing traffic redirection, and ensuring platform stability.</span>
+              <span class="spanish_site">Administré y mantuve servidores mediante la línea de comandos de Linux, resolviendo incidencias, gestionando redirección de tráfico y asegurando la estabilidad del sistema.
+              </span>
             </li>
           </ul>
         </div>
